change.json url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/777warrior/crown-clothing/",
-  "name": "crwn-clothing",
+  "homepage": "https://github.com/777warrior/crown_clothing/",
+  "name": "crwn_clothing",
   "license": "MIT",
   "version": "0.1.0",
   "private": true,
