--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/777warrior/crown_clothing/",
+  "homepage": "https://777warrior.github.io/crwn-clothing/.index.html/",
   "name": "crwn_clothing",
   "license": "MIT",
   "version": "0.1.0",
